basecamp top 960 spacing fix

--- a/wp-content/themes/conall-child/src/scss/pages/page-yesterday.scss
+++ b/wp-content/themes/conall-child/src/scss/pages/page-yesterday.scss
@@ -1312,7 +1312,7 @@ div#section-hsform-outer-yes.edh-section {
         }
     }
     div#section-basecamp {
-    /* margin-top: 0 !important; */
+        background-position-y: -8px !important;
     }
 }
 @media all and (max-width: 768px) {
